Fix test US5